# pro-video-compressor

./: .gitignore  CMakeLists.txt  NEWS.md  app.manifest  resources.qrc  scrape_reuters.py  شرح وضعیت
.github/workflows/: build.yml  scrape.yml
src/: ThemeManager.cpp  ThemeManager.h  compression_settings.h  ffmpeg_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  win32_helpers.h
src/themes/: ClassicLight.qss  MonochromeDark.qss  NekoDark.qss
